.jjconflict-side-3/src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_ui.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test ui
---
[Test] test::Ui
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/ui)
